diana_driver/DianaApi/include/DianaAPI.h

/*************************************** version 0.1 ***************************************/

extern "C" typedef struct _SrvNetSt {
    char SrvIp[32];
    unsigned short LocHeartbeatPort;
    unsigned short LocRobotStatePort;
    unsigned short LocSrvPort;
} srv_net_st;
DIANA_API int initSrv(FNCERRORCALLBACK fnError, FNCSTATECALLBACK fnState, srv_net_st *pinfo);
DIANA_API int destroySrv();
DIANA_API int setPushPeriod(int intPeriod);  //设置状态推送频率
DIANA_API int moveTCP(/*IN*/ tcp_direction_e d, /*IN*/ double v, /*IN*/ double a, /*IN*/ double *active_tcp = nullptr);
DIANA_API int rotationTCP(/*IN*/ tcp_direction_e d, /*IN*/ double v, /*IN*/ double a,
                          /*IN*/ double *active_tcp = nullptr);
DIANA_API int moveJoint(/*IN*/ joint_direction_e d, /*IN*/ int i, /*IN*/ double v, /*IN*/ double a);
DIANA_API int moveJToTarget(/*IN[7]*/ double *joints, /*IN*/ double v, /*IN*/ double a);
DIANA_API int moveJToPose(/*IN[6]*/ double *pose, /*IN*/ double v, /*IN*/ double a,
                          /*IN*/ double *active_tcp = nullptr);
DIANA_API int moveLToTarget(/*IN[7]*/ double *joints, /*IN*/ double v, /*IN*/ double a);
DIANA_API int moveLToPose(/*IN[6]*/ double *pose, /*IN*/ double v, /*IN*/ double a,
                          /*IN*/ double *active_tcp = nullptr);
DIANA_API int getJointPos(/*OUT[7]*/ double *joints);
DIANA_API int getJointAngularVel(/*OUT[7]*/ double *vels);
DIANA_API int getJointCurrent(/*OUT[7]*/ double *joints);
DIANA_API int getJointTorque(/*OUT[7]*/ double *torques);
DIANA_API int getTcpPos(/*OUT[6]*/ double *pose);
DIANA_API double getTcpExternalForce();
typedef enum _Mode {
    T_MODE_INVALID = -1,
    T_MODE_POSITION = 0,
    T_MODE_JOINT_IMPEDANCE,
    T_MODE_CART_IMPEDANCE,
} mode_e;
DIANA_API int changeControlMode(mode_e m);  // ChangeMode:Position, JointImpedance, CartImpedance
/*************************************** version 0.2 ***************************************/

DIANA_API unsigned short getLibraryVersion();
DIANA_API const char *formatError(int e);
DIANA_API int getLastError();
DIANA_API int setLastError(int e);
// setDefaultActiveTcp:该函数将会改变moveTCP，rotationTCP，moveJToPose，moveLToPose，speedJ，speedL，forward，inverse，getTcpPos，getTcpExternalForce的默认行为。
DIANA_API int setDefaultActiveTcp(/*IN[16]*/ double *default_tcp);
DIANA_API int getLinkState();
/*************************************** version 0.3 ***************************************/

DIANA_API int getTcpForce(/*OUT[6]*/ double *forces);
DIANA_API int getJointForce(/*OUT[7]*/ double *forces);
DIANA_API bool isCollision();
/*************************************** DH参数标定 ***************************************/

DIANA_API int initDHCali(/*IN[3*nrSets]*/ double *tcpMeas, /*IN[7*nrSets]*/ double *jntPosMeas,
                         /*[IN]*/ unsigned int nrSets);
DIANA_API int getDHCaliResult(/*OUT[28]*/ double *rDH, /*OUT[6]*/ double *wRT, /*OUT[3]*/ double *tRT,
                              /*OUT[2]*/ double *confid);
DIANA_API int setDH(/*IN[7]*/ double *a, /*IN[7]*/ double *alpha, /*IN[7]*/ double *d, /*IN[7]*/ double *theta);
DIANA_API int setWrd2BasRT(/*IN[6]*/ double *RTw2b);
DIANA_API int setFla2TcpRT(/*IN[3]*/ double *RTf2t);
/*************************************** version 0.4 ***************************************/

DIANA_API char getRobotState();
DIANA_API int resume();