diana_driver/DianaApi/include/DianaAPIDef.h

extern "C" typedef void (*FNCERRORCALLBACK)(int e);
extern "C" typedef void (*FNCSTATECALLBACK)(StrRobotStateInfo *pinfo);