diana_driver/DianaApi/bin/DianaApi.py


def getRobotState():
    api_mod.getRobotState.restype = c_int8
    ret = api_mod.getRobotState()
    return ret


def initSrv(srv_net_st, fnError=None, fnState=None):
    pinfo = SRV_NET_ST()
    strIpAddress = srv_net_st[0]
    pinfo.ipAddress = bytes(strIpAddress.encode('utf-8'))
    pinfo.SLocHeartbeatPortrvIp = srv_net_st[1]
    pinfo.LocRobotStatePort = srv_net_st[2]
    pinfo.LocSrvPort = srv_net_st[3]
    api_mod.initSrv.argtypes = [FNCERRORCALLBACK, FNCSTATECALLBACK, POINTER(SRV_NET_ST)]
    api_mod.initSrv.restype = c_int
    if fnError == None:
        fnError = FNCERRORCALLBACK()
    if fnState == None:
        fnState = FNCSTATECALLBACK()
    ret = api_mod.initSrv(fnError, fnState, byref(pinfo))
    return message(ret)


def destroySrv():
    api_mod.destroySrv.restype = c_int
    ret = api_mod.destroySrv()
    return message(ret)

def setPushPeriod(period):
    api_mod.setPushPeriod.argtypes = [c_int]
    api_mod.setPushPeriod.restype = c_int
    ret = api_mod.setPushPeriod(period)
    return message(ret)

def getJointPos(jointsPosition):
    dianaJointsPosition = DIANA_JOINTS_POSITION()
    dianaJointsPosition.values = (c_double * 7)()
    api_mod.getJointPos.argtypes = [POINTER(DIANA_JOINTS_POSITION)]
    api_mod.getJointPos.restype = c_int
    ret = api_mod.getJointPos(byref(dianaJointsPosition))
    for index in range(0, len(jointsPosition)):
      jointsPosition[index] = dianaJointsPosition.values[index]
    return message(ret)


def getTcpPos(tcpPose):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    api_mod.getTcpPos.argtypes = [POINTER(DIANA_TCP_POSE)]
    api_mod.getTcpPos.restype = c_int
    ret = api_mod.getTcpPos(byref(dianaTcpPose))
    for index in range(0, len(dianaTcpPose.values)):
      tcpPose[index] = dianaTcpPose.values[index]
    return message(ret)


def getJointAngularVel(jointAngularVel):
    dianaJointAngularVel = DIANA_JOINT_ANGULAR_VEL()
    dianaJointAngularVel.values = (c_double * 7)()
    api_mod.getJointAngularVel.argtypes = [POINTER(DIANA_JOINT_ANGULAR_VEL)]
    api_mod.getJointAngularVel.restype = c_int
    ret = api_mod.getJointAngularVel(byref(dianaJointAngularVel))
    for index in range(0, len(jointAngularVel)):
      jointAngularVel[index] = dianaJointAngularVel.values[index]
    return message(ret)


def getTcpForce(tcpForce):
    dianaTcpForce = DIANA_TCP_FORCE()
    dianaTcpForce.values = (c_double * 6)()
    api_mod.getTcpForce.argtypes = [POINTER(DIANA_TCP_FORCE)]
    api_mod.getTcpForce.restype = c_int
    ret = api_mod.getTcpForce(byref(dianaTcpForce))
    for index in range(0, len(dianaTcpForce.values)):
      tcpForce[index] = dianaTcpForce.values[index]
    return message(ret)


def getJointForce(jointForce):
    dianaJointForce = DIANA_JOINTS_FORCE()
    dianaJointForce.values = (c_double * 7)()
    api_mod.getJointForce.argtypes = [POINTER(DIANA_JOINTS_FORCE)]
    api_mod.getJointForce.restype = c_int
    ret = api_mod.getJointForce(byref(dianaJointForce))
    for index in range(0, len(jointForce)):
      jointForce[index] = dianaJointForce.values[index]
    return message(ret)

def moveJToTarget(joints, v, a):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.moveJToTarget.argtypes = [
        POINTER(DIANA_JOINTS_POSITION), c_double, c_double]
    api_mod.moveJToTarget.restype = c_int
    ret = api_mod.moveJToTarget(dianaJointPos, v, a)
    return message(ret)


def moveJToPose(pose, v, a):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    active_tcp = c_void_p(0)
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    api_mod.moveJToPose.argtypes = [
        POINTER(DIANA_TCP_POSE), c_double, c_double, c_void_p]
    api_mod.moveJToPose.restype = c_int
    ret = api_mod.moveJToPose(dianaTcpPose, v, a, active_tcp)
    return message(ret)

def moveLToTarget(joints, v, a):
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJointPos.values[index] = joints[index]
    api_mod.moveLToTarget.argtypes = [
        POINTER(DIANA_JOINTS_POSITION), c_double, c_double]
    api_mod.moveLToTarget.restype = c_int
    ret = api_mod.moveLToTarget(dianaJointPos, v, a)
    return message(ret)


def moveLToPose(pose, v, a):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    active_tcp = c_void_p(0)
    for index in range(0, len(dianaTcpPose.values)):
        dianaTcpPose.values[index] = pose[index]
    api_mod.moveLToPose.argtypes = [
        POINTER(DIANA_TCP_POSE), c_double, c_double, c_void_p]
    api_mod.moveLToPose.restype = c_int
    ret = api_mod.moveLToPose(dianaTcpPose, v, a, active_tcp)
    return message(ret)


def getJointCurrent(jointCurrent):
    dianaJointCurrent = DIANA_JOINT_CURRENT()
    dianaJointCurrent.values = (c_double*7)()
    for index in range(0, len(jointCurrent)):
        dianaJointCurrent.values[index] = jointCurrent[index]
    api_mod.getJointCurrent.argtypes = [POINTER(DIANA_JOINT_CURRENT)]
    api_mod.getJointCurrent.restype = c_int
    ret = api_mod.getJointCurrent(byref(dianaJointCurrent))
    for index in range(0, len(jointCurrent)):
        jointCurrent[index] = dianaJointCurrent.values[index]
    return message(ret)


def getJointTorque(jointTorque):
    dianaJointTorque = DIANA_JOINT_TORQUE()
    dianaJointTorque.values = (c_double*7)()
    for index in range(0, len(jointTorque)):
        dianaJointTorque.values[index] = jointTorque[index]
    api_mod.getJointTorque.argtypes = [POINTER(DIANA_JOINT_TORQUE)]
    api_mod.getJointTorque.restype = c_int
    ret = api_mod.getJointTorque(byref(dianaJointTorque))
    for index in range(0, len(jointTorque)):
        jointTorque[index] = dianaJointTorque.values[index]
    return message(ret)


def setDefaultActiveTcp(default_tcp):
    defaultTcp = DIANA_DEFAULT_TCP()
    defaultTcp.values = (c_double*16)()
    for index in range(0, len(defaultTcp.values)):
        defaultTcp.values[index] = default_tcp[index]
    api_mod.setDefaultActiveTcp.argtypes = [POINTER(DIANA_DEFAULT_TCP)]
    api_mod.setDefaultActiveTcp.restype = c_int
    ret = api_mod.setDefaultActiveTcp(defaultTcp)
    if(ret == 0):
        print("setDefaultActiveTcp succeeds")
        return True
    else:
        print("setDefaultActiveTcp fails")
        return False


##########v2.0##########################


def moveTCP(d, v, a):
    active_tcp = c_void_p(0)
    api_mod.moveTCP.argtypes = [c_int, c_double, c_double, c_void_p]
    api_mod.moveTCP.restype = c_int
    ret = api_mod.moveTCP(d.value, v, a, active_tcp)
    return message(ret)


def rotationTCP(d, v, a):
    active_tcp = c_void_p(0)
    api_mod.rotationTCP.argtypes = [c_int, c_double, c_double, c_void_p]
    api_mod.rotationTCP.restype = c_int
    ret = api_mod.rotationTCP(d.value, v, a, active_tcp)
    return message(ret)


def moveJoint(d, i, v, a):
    api_mod.moveJoint.argtypes = [c_int, c_int, c_double, c_double]
    api_mod.moveJoint.restype = c_int
    ret = api_mod.moveJoint(d.value, i, v, a)
    return message(ret)


def getTcpExternalForce():
    api_mod.getTcpExternalForce.restype = c_double
    ret = api_mod.getTcpExternalForce()
    return ret


def changeControlMode(m):
    api_mod.changeControlMode.argtypes = [c_int]
    api_mod.changeControlMode.restype = c_int
    ret = api_mod.changeControlMode(m.value)
    return message(ret)


def getLibraryVersion():
    api_mod.getLibraryVersion.restype = c_uint
    ret = api_mod.getLibraryVersion()
    return ret


def formatError(e):
    api_mod.formatError.argtypes = [c_int]
    api_mod.formatError.restype = c_char_p
    ret = api_mod.formatError(e)
    return ret


def getLastError():
    api_mod.getLastError.restype = c_int
    ret = api_mod.getLastError()
    return ret


def setLastError(e):
    api_mod.setLastError.argtypes = [c_int]
    api_mod.setLastError.restype = c_int
    ret = api_mod.setLastError(e)
    return ret


def getLinkState():
    api_mod.getLinkState.restype = c_int
    ret = api_mod.getLinkState()
    return message(ret)


def isCollision():
    api_mod.isCollision.restype = c_bool
    ret = api_mod.isCollision()
    return ret

######################DH参数标定#############################
def initDHCali(tcpMeas,jntPosMeas,nrSets):
    DHtcpMeas = DIANA_DH_TCP_MEAS()
    DHtcpMeas.values = (c_double*3)()
    DHjntPosMeas = DIANA_DH_JOINT_POS__MEAS()
    DHjntPosMeas.values = (c_double*7)()
    for index in range(0,len(DHtcpMeas.values)):
        DHtcpMeas.values[index] = tcpMeas[index]
    for index in range(0,len(DHjntPosMeas.values)):
        DHjntPosMeas.values[index] = jntPosMeas[index]
    api_mod.initDHCali.restype = c_int
    api_mod.initDHCali.argtypes = [ POINTER(DIANA_DH_TCP_MEAS),POINTER(DIANA_DH_JOINT_POS__MEAS),c_uint]
    ret = api_mod.initDHCali(byref(DHtcpMeas), byref(DHjntPosMeas), nrSets)
    return message(ret)

def getDHCaliResult(rDH,wRT,tRT,confid):
    dhR = DIANA_DH_R()
    dhR.values = (c_double*28)()
    rtW = DIANA_DH_WRT()
    rtW.values = (c_double*6)()
    rtT = DIANA_DH_TRT()
    rtT.values = (c_double*3)()
    dhConfid = DIANA_DH_CONFID()
    dhConfid.values = (c_double*2)()
    api_mod.getDHCaliResult.restype = c_int
    api_mod.getDHCaliResult.argtypes = [ POINTER(DIANA_DH_R),POINTER(DIANA_DH_WRT),POINTER(DIANA_DH_TRT),POINTER(DIANA_DH_CONFID)]
    ret = api_mod.getDHCaliResult(byref(dhR), byref(rtW), byref(rtT), byref(dhConfid))
    for index in range(0,len(rDH)):
        rDH[index] = dhR.values[index]
    for index in range(0,len(wRT)):
        wRT[index] = rtW.values[index]
    for index in range(0,len(tRT)):
        tRT[index] = rtT.values[index]
    for index in range(0,len(confid)):
        confid[index] = dhConfid.values[index]
    return message(ret)
#_________________________________________________________________________________________#
def setDH(a,alpha,d,theta):
    arr_aDH = DIANA_DH_A()
    arr_aDH.values = (c_double*7)()
    for index in range(0, len(a)):
        arr_aDH.values[index] = a[index]
    arr_alphaDH = DIANA_DH_Alpha()
    arr_alphaDH.values = (c_double*7)()
    for index in range(0, len(alpha)):
        arr_alphaDH.values[index] = alpha[index]
    arr_dDH = DIANA_DH_D()
    arr_dDH.values = (c_double*7)()
    for index in range(0, len(d)):
        arr_dDH.values[index] = d[index]
    arr_thetaDH = DIANA_DH_Theta()
    arr_thetaDH.values = (c_double*7)()
    for index in range(0, len(theta)):
        arr_thetaDH.values[index] = theta[index]
    api_mod.setDH.restype = c_int
    api_mod.setDH.argtypes = [ POINTER(DIANA_DH_A), 
        POINTER(DIANA_DH_Alpha),POINTER(DIANA_DH_D), POINTER(DIANA_DH_Theta)]
    ret = api_mod.setDH(byref(arr_aDH),byref(arr_alphaDH),byref(arr_dDH),byref(arr_thetaDH))
    return message(ret)

def setWrd2BasRT(RTw2b):
    arr_RTw2b = DIANA_DH_RTw2b()
    arr_RTw2b.values = (c_double*6)()
    for index in range(0, len(RTw2b)):
        arr_RTw2b.values[index] = RTw2b[index]
    api_mod.setWrd2BasRT.restype = c_int
    api_mod.setWrd2BasRT.argtypes = [ POINTER(DIANA_DH_RTw2b)]
    ret = api_mod.setWrd2BasRT(byref(arr_RTw2b))
    return message(ret)

def setFla2TcpRT(RTf2t):
    arr_RTf2t = DIANA_DH_RTf2t()
    arr_RTf2t.values = (c_double*3)()
    for index in range(0, len(RTf2t)):
        arr_RTf2t.values[index] = RTf2t[index]
    api_mod.setFla2TcpRT.restype = c_int
    api_mod.setFla2TcpRT.argtypes = [ POINTER(DIANA_DH_RTf2t)]
    ret = api_mod.setFla2TcpRT(byref(arr_RTf2t))
    return message(ret)
#########################################################

def resume():
    api_mod.resume.restype = c_int
    ret = api_mod.resume()
    return message(ret)

